// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RapmUtils RapmUtils - buildPlayerContext 1`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
    "Player, Other",
    "Data, Dummy",
  ],
  "config": Object {
    "fixedRegression": -1,
    "priorMode": -1,
    "removalPct": 0,
  },
  "defLineupPoss": 944,
  "numDefLineups": 5,
  "numOffLineups": 5,
  "numPlayers": 8,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Data, Dummy": 7,
    "Morsell, Darryl": 3,
    "Player, Other": 6,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "basis": Object {
      "def": 0,
      "off": 0,
    },
    "includeStrong": Object {},
    "keyUsed": "value",
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "def_ftr": -0.0048993288590604145,
        "def_orb": undefined,
        "def_to": 0.0074496644295301995,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 4.5,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.0007262569832402338,
        "def_orb": undefined,
        "def_to": 0.006759776536312849,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 5,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -4.5,
        "off_adj_ppp": 4.5,
        "off_adj_ppp_alt": -20.864782871120426,
        "off_usage": 0.20864782871120427,
      },
      Object {
        "def_adj_ppp": -5,
        "off_adj_ppp": 5,
        "off_adj_ppp_alt": -25.0546350615718,
        "off_usage": 0.250546350615718,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removedPlayers": Object {},
  "unbiasWeight": 0,
}
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 2`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
  ],
  "config": Object {
    "fixedRegression": -1,
    "priorMode": -1,
    "removalPct": 0.2,
  },
  "defLineupPoss": 944,
  "numDefLineups": 5,
  "numOffLineups": 5,
  "numPlayers": 6,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Morsell, Darryl": 3,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "basis": Object {
      "def": 0,
      "off": 0,
    },
    "includeStrong": Object {},
    "keyUsed": "value",
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "def_ftr": -0.0048993288590604145,
        "def_orb": undefined,
        "def_to": 0.0074496644295301995,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 4.5,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.0007262569832402338,
        "def_orb": undefined,
        "def_to": 0.006759776536312849,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 5,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
      Object {
        "def_ftr": -0.05,
        "def_orb": undefined,
        "def_to": -0.01,
        "off_2p": undefined,
        "off_2pmid": undefined,
        "off_2pmidr": undefined,
        "off_2prim": undefined,
        "off_2primr": undefined,
        "off_3p": undefined,
        "off_3pr": undefined,
        "off_adj_ppp": 0,
        "off_assist": undefined,
        "off_efg": undefined,
        "off_ftr": undefined,
        "off_orb": undefined,
        "off_to": undefined,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -4.5,
        "off_adj_ppp": 4.5,
        "off_adj_ppp_alt": -20.864782871120426,
        "off_usage": 0.20864782871120427,
      },
      Object {
        "def_adj_ppp": -5,
        "off_adj_ppp": 5,
        "off_adj_ppp_alt": -25.0546350615718,
        "off_usage": 0.250546350615718,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
      Object {
        "def_adj_ppp": 0,
        "off_adj_ppp": 0,
        "off_adj_ppp_alt": 0,
        "off_usage": 0,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removedPlayers": Object {
    "Data, Dummy": Array [
      0.05254860746190226,
      0,
      Object {
        "def_poss": Object {
          "value": 50,
        },
        "doc_count": 0,
        "key": "empty",
        "off_poss": Object {
          "value": 50,
        },
      },
    ],
    "Player, Other": Array [
      0.1576458223857068,
      0,
      Object {
        "def_poss": Object {
          "value": 150,
        },
        "doc_count": 0,
        "key": "empty",
        "off_poss": Object {
          "value": 150,
        },
      },
    ],
  },
  "unbiasWeight": 0,
}
`;
